Update endpoint in test and HTML

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -23,7 +23,7 @@
             <br>
         </div>
         <div class="buttons">
-            <form action="/trivia" method="get">
+            <form action="/questions" method="get">
                 <input type="submit" id="new-questions-button" value="New Questions">
             </form>
         </div>
